# Projet-Maths-Temperature

./: .gitignore  CMakeLists.txt
src/: app.cpp  fenetre.cpp  fileSC.cpp  init.cpp  main.cpp  methodes.cpp  radiateur.cpp  scene.cpp  source.cpp  temperature.cpp
src/headers/: app.hpp  fenetre.hpp  fileSC.hpp  init.hpp  radiateur.hpp  scene.hpp  source.hpp  temperature.hpp
src/ppm/: scene_2.ppm  test.ppm
src/sc/: scene.sc
